clean-up, typos